# fishmlserv

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  r.txt
LB/: Dockerfile  default.conf
note/: Note.ipynb  ss.ipynb
src/fishmlserv/: curl.py  fish.py  main.py  pwd.py
src/fishmlserv/model/: manager.py  model.pkl
tests/: test_curl.py
