[project]
name = "fishmlserv"
version = "1.2.0"
description = "Default template for PDM package"
authors = [
    {name = "tbongkim03", email = "tbongkim03@gmial.com"},
]
dependencies = [
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
prediction = "fishmlserv.fish:run"
get-model-path = "fishmlserv.pwd:run"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "matplotlib>=3.9.2",
]
